sreeshanth(yml changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1184 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1015,28 +1015,28 @@ en: # locale
   step_4: "Step - 4"
   set_privilege: "Set Privilege"
   set_privilege_for: "Set privileges for"
-  ExaminationControl: "Examination Control"
-  EnterResults: "Enter Result"
-  ViewResults: "View Result"
-  Admission: "Admission"
-  StudentsControl: "Students Control"
-  ManageNews: "Manage News"
-  Timetable: "Timetable"
-  StudentAttendanceView: "Student Attendance View"
-  HrBasics: "Hr Basics"
-  AddNewBatch: "Add New Batch"
-  SubjectMaster: "Subject Master"
-  EventManagement: "Event Management"
-  GeneralSettings: "General Settings"
-  FinanceControl: "Finance Control"
-  TimetableView: "Timetable View"
-  StudentAttendanceRegister: "Student Attendance Register"
-  EmployeeAttendance: "Employee Attendance"
-  PayslipPowers: "Payslip Powers"
-  EmployeeSearch: "Employee Search"
-  SMSManagement: "SMS Management"
-  ManageTimetable: "Manage Timetable"
-  Librarian: "Librarian"
+  examination_control_privilege: "Examination Control"
+  enter_results_privilege: "Enter Result"
+  view_results_privilege: "View Result"
+  admission_privilege: "Admission"
+  students_control_privilege: "Students Control"
+  manage_news_privilege: "Manage News"
+  timetable_privilege: "Timetable"
+  student_attendance_view_privilege: "Student Attendance View"
+  hr_basics_privilege: "Hr Basics"
+  add_new_batch_privilege: "Add New Batch"
+  subject_master_privilege: "Subject Master"
+  event_management_privilege: "Event Management"
+  general_settings_privilege: "General Settings"
+  finance_control_privilege: "Finance Control"
+  timetable_view_privilege: "Timetable View"
+  student_attendance_register_privilege: "Student Attendance Register"
+  employee_attendance_privilege: "Employee attendance"
+  payslip_powers_privilege: "Payslip Powers"
+  employee_search_privilege: "Employee Search"
+  sms_management_privilege: "SMS Management"
+  manage_timetable_privilege: "Manage Timetable"
+  librarian_privilege: "Librarian"
   select_reporting_manager: "Select Reporting Manager"
   step_5: "Step - 5"
   selected_manager: "Selected Manager"
