--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1012,28 +1012,28 @@ es: # locale
   step_4: "Paso - 4"
   set_privilege: "Configurar privilegios"
   set_privilege_for: "configurar privilegios para"
-  ExaminationControl: "Control de exámenes"
-  EnterResults: "Ingresar resultados"
-  ViewResults: "Ver resultados"
-  Admission: "Admisión"
-  StudentsControl: "Control de estudiantes"
-  ManageNews: "Gestionar noticias"
-  Timetable: "Horarios"
-  StudentAttendanceView: "Vista de asistencia de estudiantes"
-  HrBasics: "RH básico"
-  AddNewBatch: "Agregar nuevo grupo"
-  SubjectMaster: "Gestión de asignaturas"
-  EventManagement: "Gestión de eventos"
-  GeneralSettings: "Configuración General"
-  FinanceControl: "Control Financiero"
-  TimetableView: "Ver Horarios"
-  StudentAttendanceRegister: "Asistencia de estudiantes"
-  EmployeeAttendance: "Asistencia de empleados"
-  PayslipPowers: "Control de comprobantes"
-  EmployeeSearch: "Búsqueda de empleados"
-  SMSManagement: "Gestión SMS"
-  ManageTimetable: "Gestión de horarios"
-  Librarian: "Bibliotecario"
+  examination_control_privilege: "Control de exámenes"
+  enter_results_privilege: "Ingresar resultados"
+  view_results_privilege: "Ver resultados"
+  admission_privilege: "Admisión"
+  students_control_privilege: "Control de estudiantes"
+  manage_news_privilege: "Gestionar noticias"
+  timetable_privilege: "Horarios"
+  student_attendance_view_privilege: "Vista de asistencia de estudiantes"
+  hr_basics_privilege: "RH básico"
+  add_new_batch_privilege: "Agregar nuevo grupo"
+  subject_master_privilege: "Gestión de asignaturas"
+  event_management_privilege: "Gestión de eventos"
+  general_settings_privilege: "Configuración General"
+  finance_control_privilege: "Control Financiero"
+  timetable_view_privilege: "Ver Horarios"
+  student_attendance_register_privilege: "Asistencia de estudiantes"
+  employee_attendance_privilege: "Asistencia de empleados"
+  payslip_powers_privilege: "Control de comprobantes"
+  employee_search_privilege: "Búsqueda de empleados"
+  sms_management_privilege: "Gestión SMS"
+  manage_timetable_privilege: "Gestión de horarios"
+  librarian_privilege: "Bibliotecario"
   select_reporting_manager: "Seleccionar administrador de reportes"
   step_5: "Paso - 5"
   selected_manager: "Administrador seleccionado"
