--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -991,28 +991,28 @@ hi:
   step_4: "कदम - 4"
   set_privilege: "विशेषाधिकार सेट"
   set_privilege_for: "विशेषाधिकार सेट के लिए"
-  ExaminationControl: "परीक्षा नियंत्रण"
-  EnterResults: "नतीजे दर्ज करें"
-  ViewResults: "परिणाम देखें"
-  Admission: "प्रवेश"
-  StudentsControl: "छात्र नियंत्रण"
-  ManageNews: "समाचार प्रबंधित"
-  Timetable: "समय सारिणी"
-  StudentAttendanceView: "छात्र उपस्थिति देखें"
-  HrBasics: "मानव संसाधन मूल बातें"
-  AddNewBatch: "नया बैच जोड़ें"
-  SubjectMaster: "विषय मास्टर"
-  EventManagement: "आकस्मिकता प्रबंध"
-  GeneralSettings: "सामान्य सेटिंग्स"
-  FinanceControl: "वित्त नियंत्रण"
-  TimetableView: "समय सारिणी देखें"
-  StudentAttendanceRegister: "छात्र उपस्थिति रजिस्टर"
-  EmployeeAttendance: "कर्मचारी उपस्थिति"
-  PayslipPowers: "वेतन पर्ची पॉवर्स"
-  EmployeeSearch: "कर्मचारी खोजें"
-  SMSManagement: "एसएमएस प्रबंधन"
-  ManageTimetable: "समय सारिणी प्रबंधित"
-  Librarian: "लाइब्रेरियन"
+  examination_control_privilege: "परीक्षा नियंत्रण"
+  enter_results_privilege: "नतीजे दर्ज करें"
+  view_results_privilege: "परिणाम देखें"
+  admission_privilege: "प्रवेश"
+  students_control_privilege: "छात्र नियंत्रण"
+  manage_news_privilege: "समाचार प्रबंधित"
+  timetable_privilege: "समय सारिणी"
+  student_attendance_view_privilege: "छात्र उपस्थिति देखें"
+  hr_basics_privilege: "मानव संसाधन मूल बातें"
+  add_new_batch_privilege: "नया बैच जोड़ें"
+  subject_master_privilege: "विषय मास्टर"
+  event_management_privilege: "आकस्मिकता प्रबंध"
+  general_settings_privilege: "सामान्य सेटिंग्स"
+  finance_control_privilege: "वित्त नियंत्रण"
+  timetable_view_privilege: "समय सारिणी देखें"
+  student_attendance_registe_privileger: "छात्र उपस्थिति रजिस्टर"
+  employee_attendance_privilege: "कर्मचारी उपस्थिति"
+  payslip_powers_privilege: "वेतन पर्ची पॉवर्स"
+  employee_search_privilege: "कर्मचारी खोजें"
+  sms_management_privilege: "एसएमएस प्रबंधन"
+  manage_timetable_privilege: "समय सारिणी प्रबंधित"
+  librarian_privilege: "लाइब्रेरियन"
   select_reporting_manager: "रिपोर्टिंग प्रबंधक का चयन करें"
   step_5: "कदम - 5"
   selected_manager: "चयनित प्रबंधक"
