sreeshanth(translation  changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1187 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1228,7 +1228,7 @@ es: # locale
   user_profile: "Perfil de usuario"
   user_information: "Información de usuario"
   privilege: "privilegio"
-  to_dashboard: "al Panel de Globoschool"
+  to_dashboard: "al Panel de Fedena"
   admission_link_title: "Ingresar detalles de admisión de estudiantes."
   student_link_title: "Buscar en los registros de estudiantes presentes y antiguos."
   user_link_title: "         Gestionar usuarios         "
