#1130 translate general setting page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1194 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -728,8 +728,8 @@ es: # locale
   dues: "Deudas"
   marks_and_grades: "Notas y desempeños"
   subject_wise_report: "Reporte por asignaturas"
-  online: "Online"
-  offline: "Offline"
+  online: "En línea"
+  offline: "Fuera de línea"
   add_subject: "Agregar asignatura"
   add_normal_subject: "Agregar asignatura normal"
   subjects_assigned: "Las asignaturas has sido asignadas."
