sreeshanth( translation issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1196 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1939,8 +1939,8 @@ en: # locale
     flash15: "Role updated"
     flash16: "User account not created!"
     flash17: "User account created! "
-    flash18: "Reset Password link emailed to"
-    flash19: "No user exists with email address"
+    flash18: "Reset Password link has been send to your email"
+    flash19: "No user exists with username"
     
 #student controller translation
   student:
