#1134 translation-privilege page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1197 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1741,6 +1741,33 @@ ar: # locale
   partial: "جزئي"
   student_category_updated_succesfully: "فئة الطالب تحديثها بنجاح"
   student_category_deleted_succesfully: "فئة الطالب حذف بنجاح"
+  placement_activities_privilege: "التنسيب الأنشطة"
+  hostel_admin_privilege: "نزل الادارية"
+  group_create_privilege: "المجموعة إنشاء"
+  transport_admin_privilege: "مسؤول النقل"
+  task_management_privilege: "مهمة إدارة"
+  examination_control_privilege: "فحص التحكم"
+  enter_results_privilege: "أدخل النتيجة"
+  view_results_privilege: "عرض النتيجة"
+  admission_privilege: "قبول"
+  students_control_privilege: "طلاب التحكم"
+  manage_news_privilege: "إدارة الأخبار"
+  timetable_privilege: "الجدول الزمني"
+  student_attendance_view_privilege: "طالب الحضور الشخصي"
+  hr_basics_privilege: "أساسيات ساعة"
+  add_new_batch_privilege: "إضافة دفعة جديدة"
+  subject_master_privilege: "الموضوع الرئيسي"
+  event_management_privilege: "إدارة الحدث"
+  general_settings_privilege: "إعدادات عامة"
+  finance_control_privilege: "الرقابة المالية"
+  timetable_view_privilege: "عرض الجدول الزمني"
+  student_attendance_register_privilege: "سجل حضور الطالب"
+  employee_attendance_privilege: "الموظف الحضور"
+  payslip_powers_privilege: "قسيمة الدفع القوى"
+  employee_search_privilege: "الموظف البحث"
+  sms_management_privilege: "إدارة SMS"
+  manage_timetable_privilege: "إدارة الجدول الزمني"
+  librarian_privilege: "أمين المكتبة"
 
   flash_msg1: "تحديث إضافية المجموعة الامتحان بنجاح."
   flash_msg2: "آسف"
