feature => added print receipt option for partial payments, fixes #46
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1212 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1528,6 +1528,7 @@ ar: # locale
   department_salary_report: "تقرير قسم الراتب"
   employee_salary: "راتب الموظف"
   fee_reciept: "رسوم الإيصال"
+  partial_payment_receipt: "الدفع الجزئي الإيصا"
   fee_collection_dates: "جمع الرسوم التواريخ"
   view_fee_collection_dates: "عرض جمع الرسوم التواريخ"
   fees_discount_succesfully_created: "رسوم مخفضة إنشاء بنجاح"
