--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1558,7 +1558,8 @@ en: # locale
   department_wise_salary_report: "Department-wise Salary Report"
   department_salary_report: "Department Salary Report"
   employee_salary: "Employee Salary"
-  fee_reciept: "Fee Reciept"
+  fee_reciept: "Fee Receipt"
+  partial_payment_receipt: "Partial Payment Receipt"
   fee_collection_dates: "Fee collection dates"
   view_fee_collection_dates: "View fee collection dates"
   fees_discount_succesfully_created: "Fees Discount Successfully created"
