sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1216 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1262,7 +1262,7 @@ en: # locale
   forgot_password: "Help! I've Forgotten my Password?"
   login: "Login"
   fedena_logo: "/images/application/app_fedena_logo.jpg"
-  enter_email: "Enter your email address"
+  enter_email: "Enter your username"
   contact_admin: "Contact Fedena Administrator to recover your password"
   logged_as: "Logged in as:"
   messages: "Messages"
