sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1217 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1877,7 +1877,7 @@ en: # locale
     flash19: "address and contact details saved for"
     flash20: "Employee address  details saved for"
     flash21: "Employee contact details saved for"
-    flash22: "Bank details saved for"
+    flash22: "Contact details updated for"
     flash23: "bank details updated"
     flash24: "Bank details saved for"
     flash25: "employee reporting manager saved"
