#1162 translation missing-Total presentes--attendance report -student profile
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1223 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -560,7 +560,7 @@ es: # locale
   select_month_and_year: "Seleccionar un mes & año"
   total_working_days: "Total días de trabajo"
   total_working_hours: "Total horas de trabajo"
-  total_present: "Total presentes"
+  total_present: "Total actual"
   full_day: "Día completo"
   afternoon: "Tarde"
   forenoon: "Medio día"
