--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -539,7 +539,7 @@ hi:
   total_working_days: "कुल कार्य दिवसों"
   total_working_hours: "कुल काम के घंटे"
   total_present: "वर्तमान कुल"
-  full_day: "Fullday"
+  full_day: "पूरा दिन"
   afternoon: "दोपहर बाद"
   forenoon: "पूर्वाह्न"
   absent: "अनुपस्थित"
@@ -566,8 +566,8 @@ hi:
   min_mark: "न्यूनतम निशान"
   add_additional_details: "अतिरिक्त विवरण जोड़ें"
   income: "आय"
-  office_phone1: "Office 1 फोन"
-  office_phone2: "Office 2 फोन"
+  office_phone1: "कार्यालय 1 फोन"
+  office_phone2: "कार्यालय 2 फोन"
   admission_date: "प्रवेश तिथि"
   contact_details: "सम्पर्क करने का विवरण"
   additional_detail: "अतिरिक्त विवरण"
