sreeshanth(translation changes and style issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1227 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,8 @@ en: # locale
 
       batch:
         name: "Name"
+        start_date: "Start date"
+        end_date: "End Date"
 
       class_timing:
         name: "Name"
