translation error in Hindi 'Please' and g->G for batch in Spanish
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1232 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -356,7 +356,7 @@ es: # locale
   guardian: "Guardián"
   course_text: "Curso"
   courses_text: "Cursos"
-  batch: "grupo"
+  batch: "Grupo"
   delete_text: "Eliminar"
   admission_number: "Número de Admisión"
   all: "Todos"
