--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1796,8 +1796,8 @@ hi:
     flash2: "अद्यतित बैच विवरण सफलतापूर्वक|"
     flash3: "सभी फ़ील्ड भरें"
     flash4: "बैच को सफलतापूर्वक नष्ट कर दिया|"
-    flash5: "हटाना Batch.Please सभी छात्रों को हटाने के करने में असमर्थ"
-    flash6: "हटाना Batch.Please सभी विषय हटाने के करने में असमर्थ"
+    flash5: "हटाना बैच.कृपया सभी छात्रों को हटाने के करने में असमर्थ"
+    flash6: "हटाना बैच.कृपया सभी विषय हटाने के करने में असमर्थ"
 
 #batch_transfer controller translation
   batch_transfers:
