sreeshanth(translation issues )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1245 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1781,6 +1781,7 @@ en: # locale
   months: "Months"
   following_pblm_occured_while_saving_the_batch: "Following problems occured while saving this batch"
   academic_year: "Academic year"
+  discount_deleted_successfully: "Discount deleted successfully"
   placement_activities_privilege: "Placement Activities"
   hostel_admin_privilege: "Hostel Admin"
   group_create_privilege: "Group Create"
