sreeshanth(STYLE  issues  and translation issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1249 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,6 +63,8 @@ en: # locale
       exam:
         start_time: "Start Time"
         end_time: "End Time"
+        minimum_marks: "Minimum marks"
+        maximum_marks: "Maximum marks"
 
       exam_group:
         name: "Name"
