sreeshanth(translation   issues )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1254 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -78,6 +78,7 @@ es: # locale
 
       news:
         title: "Título"
+        content: "contenido"
 
       news_comment:
         content: "contenido"
