bug fixed => message not showing if there is no old batch subject in assigning old batch subjects
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1271 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1831,12 +1831,14 @@ ar:
     flash4: "دفعة حذف بنجاح."
     flash5: "غير قادر على حذف Batch.Please حذف جميع الطلاب"
     flash6: "غير قادر على حذف Batch.Please حذف جميع المواد الدراسية"
+    flash7: "لا مواضيع موجودة في دفعات سابقة."
 
 #batch_transfer controller translation
   batch_transfers:
     flash1: "طلاب Trasferred بنجاح"
     flash2: "تخرج الطلاب المختارة بنجاح"
     flash3: "وقد سبق هذا الموضوع مع اسم"
+    flash4: "لا مواضيع موجودة في دفعات سابقة."
 
 #elective controller translation
   elective_groups:
